Completed CVX Solver

--- a/part2.ipynb
+++ b/part2.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tqdm import tqdm\n",
     "import numpy as np\n",
     "import utils\n",
     "from trainer import train_svm, train_test_svm\n",
@@ -18,23 +19,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "bbbdd38e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 42/42 [03:16<00:00,  4.69s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "gamma = np.array([1e-2, 5e-2, 1e-1, 5e-1, 1, 5, 10])\n",
+    "c_list = np.array([2, 4, 8, 10, 12, 14])\n",
+    "\n",
+    "params = np.array(np.meshgrid(gamma, c_list)).T.reshape(-1,2)\n",
+    "v_acc = []\n",
+    "max_acc, c_max, g_max = 0, None, None\n",
+    "for p in tqdm(params):\n",
+    "    g, c = p[0], p[1]\n",
+    "    train_acc, valid_acc = train_svm(train_data_path, data_split, 25, True, None, 'libsvm', c, 'gaussian', g, True)\n",
+    "    v_acc.append(valid_acc)\n",
+    "    if valid_acc > max_acc:\n",
+    "        c_max, g_max = c, g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7bb6239e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training SVM\n",
-      "Time Taken: 1.6850647926330566s\n",
-      "Training Accuracy: 99.80343102215869\n",
-      "Validation Accuracy: 96.00665557404326\n"
+      "10.0 14.0 0\n"
      ]
     }
    ],
    "source": [
-    "train_svm(train_data_path, data_split, 25, True, None, 'libsvm', 1, 'gaussian', 0.1)"
+    "print(g_max, c_max, max_acc)"
    ]
   },
   {
@@ -61,8 +88,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f0cb5a6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.1, 10. ])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params[13]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a01c007",
    "metadata": {},
    "outputs": [],
    "source": []
