--- a/part2.ipynb
+++ b/part2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "34b633b7",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 42/42 [03:16<00:00,  4.69s/it]\n"
+      "100%|██████████| 42/42 [03:10<00:00,  4.53s/it]\n"
      ]
     }
    ],
@@ -43,6 +43,7 @@
     "    train_acc, valid_acc = train_svm(train_data_path, data_split, 25, True, None, 'libsvm', c, 'gaussian', g, True)\n",
     "    v_acc.append(valid_acc)\n",
     "    if valid_acc > max_acc:\n",
+    "        max_acc = valid_acc\n",
     "        c_max, g_max = c, g"
    ]
   },
@@ -56,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.0 14.0 0\n"
+      "0.05 4.0 96.71381031613977\n"
      ]
     }
    ],
@@ -82,7 +83,7 @@
     }
    ],
    "source": [
-    "test_preds = train_test_svm(train_data_path, test_data_path, 25, 1, 'gaussian', 0.1)\n",
+    "test_preds = train_test_svm(train_data_path, test_data_path, 25, 1, 'gaussian', 5)\n",
     "utils.create_test_outputs(test_preds, 'results/res.csv')"
    ]
   },
